[gd_scene load_steps=3 format=3 uid="uid://bf434ia7tomul"]

[ext_resource type="Script" path="res://Scripts/cameraZone.gd" id="1_addt7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ocxun"]
size = Vector2(75, 75)

[node name="cameraZone" type="Node2D" groups=["level_camerazone"]]
modulate = Color(1, 1, 1, 0.537255)
script = ExtResource("1_addt7")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_ocxun")
debug_color = Color(0.611765, 0.356863, 1, 0.419608)

[node name="editorSprite" type="Sprite2D" parent="."]
visible = false
light_mask = 524288
visibility_layer = 524288
z_index = 100
z_as_relative = false
position = Vector2(-1.19209e-07, 0)
scale = Vector2(0.2, 0.2)

[node name="checkIfEmpty" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="exampleBounds" type="Camera2D" parent="."]
visible = false
enabled = false
zoom = Vector2(5.5, 5.5)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="checkIfEmpty" to="." method="_on_check_if_empty_timeout"]
